@@ -63,6 +63,8 @@
           (http://www.packetfence.org/mantis/view.php?id=437)
         network.mode=passive becomes network.mode=arp
           (http://www.packetfence.org/mantis/view.php?id=438)
+        remove iptables manipulations during VLAN isolation
+          (http://www.packetfence.org/mantis/view.php?id=359)
 
 1.7.4
         undef operator in SNMP.pm
